unpackaged/main/default/objects/SalesAreaData__c/SalesAreaData__c.object-meta.xml
<CustomObject>
    <label>Vue Commerciale Client</label>
    <nameField>
        <label>Nom de la Vue Commerciale Client</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Vues Commerciales Client</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>