unpackaged/main/default/objects/SalesAreaData__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Compte</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Vues Commerciales Client</relationshipLabel>
    <relationshipName>VuesCommercialesClient_Account</relationshipName>
    <type>Lookup</type>
</CustomField>