unpackaged/main/default/objects/SalesAreaData__c/fields/AccountRecordType__c.field-meta.xml
<CustomField>
    <fullName>AccountRecordType__c</fullName>
    <formula>IF( Account__r.RecordType.DeveloperName = &#39;Particulier_B2C&#39;, &quot;B2C&quot;, &quot;B2B&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Type de Compte</label>
    <type>Text</type>
</CustomField>