unpackaged/main/default/objects/SalesAreaData__c/fields/AccountStatus__c.field-meta.xml
<CustomField>
    <fullName>AccountStatus__c</fullName>
    <formula>TEXT(Account__r.Statut__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Statut du Compte</label>
    <type>Text</type>
</CustomField>