unpackaged/main/default/objects/SalesAreaData__c/fields/ADV__c.field-meta.xml
<CustomField>
    <fullName>ADV__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup vers l&#39;utilisateur</description>
    <label>ADV</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Vues_Commerciales_Client</relationshipName>
    <type>Lookup</type>
</CustomField>