unpackaged/main/default/objects/SalesAreaData__c/fields/Agrement__c.field-meta.xml
<CustomField>
    <fullName>Agrement__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Agrément</label>
    <type>Checkbox</type>
</CustomField>