unpackaged/main/default/objects/SalesAreaData__c/fields/Appartient_un_groupement__c.field-meta.xml
<CustomField>
    <fullName>Appartient_un_groupement__c</fullName>
    <description>True s&#39;il appartient à un groupement sinon false</description>
    <formula>if(
 OR(ISBLANK(Account__r.Groupement__c),ISNULL(Account__r.Groupement__c))
,

FALSE
,
TRUE

)</formula>
    <label>Appartient à un groupement</label>
    <type>Checkbox</type>
</CustomField>