unpackaged/main/default/objects/SalesAreaData__c/fields/Attractivite_secteur__c.field-meta.xml
<CustomField>
    <fullName>Attractivite_secteur__c</fullName>
    <formula>CASE(
BusinessLine__c,
&quot;Véhicules Frigorifiques&quot;,
IF(
Note_secteur__c = 1, IMAGE($Setup.PictogrammesSegmentation__c.NonPrioritaire__c, &#39;Non Prioritaire&#39;, 25, 75),
IF(
AND(Note_secteur__c &gt;= 1, Note_secteur__c &lt; 5), IMAGE($Setup.PictogrammesSegmentation__c.P3__c, &#39;P3&#39;, 25, 75),
IF(
AND(Note_secteur__c &gt;= 5, Note_secteur__c &lt; 6), IMAGE($Setup.PictogrammesSegmentation__c.P2__c, &#39;P2&#39;, 25, 75),
IF(
Note_secteur__c &gt;= 6, IMAGE($Setup.PictogrammesSegmentation__c.P1__c, &#39;P1&#39;, 25, 75),
&quot;&quot;
)
)
)
),
&quot;Véhicules Secs&quot;,
IF(
Note_secteur__c &lt;= 1,IMAGE($Setup.PictogrammesSegmentation__c.NonPrioritaire__c, &#39;Non Prioritaire&#39;, 25, 75),
&quot;&quot;
),
&quot;Containers&quot;,
IF(
Note_secteur__c = 1, IMAGE($Setup.PictogrammesSegmentation__c.NonPrioritaire__c, &#39;Non Prioritaire&#39;, 25, 75),
IF(
AND(Note_secteur__c &gt;= 1, Note_secteur__c &lt; 4.8), IMAGE($Setup.PictogrammesSegmentation__c.P3__c, &#39;P3&#39;, 25, 75),
IF(
AND(Note_secteur__c &gt;= 4.8, Note_secteur__c &lt;5.5), IMAGE($Setup.PictogrammesSegmentation__c.P2__c, &#39;P2&#39;, 25, 75),
IF(
Note_secteur__c &gt;= 5.5, IMAGE($Setup.PictogrammesSegmentation__c.P1__c, &#39;P1&#39;, 25, 75),
&quot;&quot;
)
)
)
),
&quot;Meubles&quot;,
IF(
Note_secteur__c = 1, IMAGE($Setup.PictogrammesSegmentation__c.NonPrioritaire__c, &#39;Non Prioritaire&#39;, 25, 75),
IF(
AND(Note_secteur__c &gt;= 1, Note_secteur__c &lt; 5), IMAGE($Setup.PictogrammesSegmentation__c.P3__c, &#39;P3&#39;, 25, 75),
IF(
AND(Note_secteur__c &gt;= 5, Note_secteur__c &lt; 5.5), IMAGE($Setup.PictogrammesSegmentation__c.P2__c, &#39;P2&#39;, 25, 75),
IF(
Note_secteur__c &gt;= 5.5, IMAGE($Setup.PictogrammesSegmentation__c.P1__c, &#39;P1&#39;, 25, 75),
&quot;&quot;
)
)
)
),
&quot;&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Priorité secteur</label>
    <type>Text</type>
</CustomField>