unpackaged/main/default/objects/SalesAreaData__c/fields/BusinessLine__c.field-meta.xml
<CustomField>
    <fullName>BusinessLine__c</fullName>
    <formula>TEXT(SalesArea__r.BusinessLine__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ligne de produit</label>
    <type>Text</type>
</CustomField>