unpackaged/main/default/objects/SalesAreaData__c/fields/BypassValidationProcess__c.field-meta.xml
<CustomField>
    <fullName>BypassValidationProcess__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Helps already approved SAD to bypass the process if there are no signed opportunities.</description>
    <label>BypassValidationProcess</label>
    <type>Checkbox</type>
</CustomField>