unpackaged/main/default/objects/SalesAreaData__c/fields/CAN1FY__c.field-meta.xml
<CustomField>
    <fullName>CAN1FY__c</fullName>
    <description>Somme du chiffre d&#39;affaires de tous les contrats N-1 sur l&#39;année entière sur un type de produit produits</description>
    <label>Chiffre d&#39;affaires N-1 FY</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>