unpackaged/main/default/objects/SalesAreaData__c/fields/CAN1YTD__c.field-meta.xml
<CustomField>
    <fullName>CAN1YTD__c</fullName>
    <description>Somme du chiffre d&#39;affaires de tous les contrats N-1 sur la même période YTD sur un type de produits</description>
    <label>Chiffre d&#39;affaires N-1 YTD</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>