unpackaged/main/default/objects/SalesAreaData__c/fields/Catalogue_parent__c.field-meta.xml
<CustomField>
    <fullName>Catalogue_parent__c</fullName>
    <formula>if
(
OR(Account__r.Parent.Catalogue__c = true , Account__r.UltimateAccount__r.Catalogue__c = true)
,
true
,
false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Catalogue parent</label>
    <type>Checkbox</type>
</CustomField>