unpackaged/main/default/objects/SalesAreaData__c/fields/CAYTD__c.field-meta.xml
<CustomField>
    <fullName>CAYTD__c</fullName>
    <description>Somme du chiffre d&#39;affaires de tous les contrats YTD sur un type de produit</description>
    <label>Chiffre d&#39;affaires YTD</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>