unpackaged/main/default/objects/SalesAreaData__c/fields/checkbox_pays__c.field-meta.xml
<CustomField>
    <fullName>checkbox_pays__c</fullName>
    <description>si le champs Pays__c de l&#39;objet Account à la même valeur que le champs Country de l&#39;objet utilisateur le checkbox est TRUE.</description>
    <formula>IF( Text( Account__r.Pays__c ) =   $User.Country  , true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>pays compte = pays utilisateur</label>
    <type>Checkbox</type>
</CustomField>