unpackaged/main/default/objects/SalesAreaData__c/fields/Classification_CA__c.field-meta.xml
<CustomField>
    <fullName>Classification_CA__c</fullName>
    <label>Classification C.A</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Classification_TypeClient</valueSetName>
    </valueSet>
</CustomField>