unpackaged/main/default/objects/SalesAreaData__c/fields/Code_catalogue__c.field-meta.xml
<CustomField>
    <fullName>Code_catalogue__c</fullName>
    <description>Code catalogue transmis à CPQ / AVC pour identifier le catalogue grand compte à charger</description>
    <label>Code catalogue</label>
    <length>5</length>
    <type>Text</type>
</CustomField>