unpackaged/main/default/objects/SalesAreaData__c/fields/Code_NACE__c.field-meta.xml
<CustomField>
    <fullName>Code_NACE__c</fullName>
    <formula>Account__r.DB_Code_Activite_NACE__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Code NACE</label>
    <type>Text</type>
</CustomField>