unpackaged/main/default/objects/SalesAreaData__c/fields/Compte_administration__c.field-meta.xml
<CustomField>
    <fullName>Compte_administration__c</fullName>
    <formula>if(
AND
(
OR(LEFT( Account__r.IdentifiantNational__c ,1) = &#39;1&#39; , LEFT( Account__r.IdentifiantNational__c ,1) = &#39;2&#39;)
,
 text(Account__r.TypeIdentifiantNational__c) = &#39;SIREN&#39;
)
,
TRUE
,
FALSE
)</formula>
    <label>Compte administration</label>
    <type>Checkbox</type>
</CustomField>