unpackaged/main/default/objects/SalesAreaData__c/fields/CountryforNewWorkflow__c.field-meta.xml
<CustomField>
    <fullName>CountryforNewWorkflow__c</fullName>
    <formula>OR(
				Pays_SA__c = &#39;BELGIQUE&#39;,
				Pays_SA__c = &#39;LUXEMBOURG&#39;,
				Pays_SA__c = &#39;FRANCE&#39;
			
			)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CountryforNewWorkflow</label>
    <type>Checkbox</type>
</CustomField>