unpackaged/main/default/objects/SalesAreaData__c/fields/CreditLimit__c.field-meta.xml
<CustomField>
    <fullName>CreditLimit__c</fullName>
    <formula>IF( !Agrement__c , 
        Account__r.ND_Cover__c,
        Montant_agrement__c
) - 
IF(  ISPICKVAL(Account__r.Pays__c, &#39;FRANCE&#39;),
                (( RentPrimaryQuoteAuthorized__c*2) + (RentContractInProgress__c*2)),  
                (( Account__r.RentPrimaryQuoteAuthorized_RoW__c*2) + (Account__r.RentContractInProgress_RoW__c*2)) 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Limite de credit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>