unpackaged/main/default/objects/SalesAreaData__c/fields/Date_agrement__c.field-meta.xml
<CustomField>
    <fullName>Date_agrement__c</fullName>
    <label>Date agrément</label>
    <type>Date</type>
</CustomField>