unpackaged/main/default/objects/SalesAreaData__c/fields/Date_de_derniere_activite_SAD__c.field-meta.xml
<CustomField>
    <fullName>Date_de_derniere_activite_SAD__c</fullName>
    <label>Date de dernière activité SAD</label>
    <type>DateTime</type>
</CustomField>