unpackaged/main/default/objects/SalesAreaData__c/fields/DNP_Nom_Initiateur__c.field-meta.xml
<CustomField>
    <fullName>DNP_Nom_Initiateur__c</fullName>
    <label>DNP Nom Initiateur</label>
    <length>255</length>
    <type>Text</type>
</CustomField>