unpackaged/main/default/objects/SalesAreaData__c/fields/DNP_Statut__c.field-meta.xml
<CustomField>
    <fullName>DNP_Statut__c</fullName>
    <label>DNP Statut</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Approuvée</fullName>
            </value>
            <value>
                <fullName>Rejetée</fullName>
            </value>
            <value>
                <fullName>En attente</fullName>
            </value>
            <value>
                <fullName>Annulé</fullName>
            </value>
            <value>
                <fullName>En attente DG</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>