unpackaged/main/default/objects/SalesAreaData__c/fields/Domestic_Ultimate__c.field-meta.xml
<CustomField>
    <fullName>Domestic_Ultimate__c</fullName>
    <formula>Account__r.DB_DUNS_DU__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Domestic Ultimate</label>
    <type>Text</type>
</CustomField>