unpackaged/main/default/objects/SalesAreaData__c/fields/DUNS_DU__c.field-meta.xml
<CustomField>
    <fullName>DUNS_DU__c</fullName>
    <formula>Account__r.DB_DUNS_DU__c</formula>
    <label>DUNS DU</label>
    <type>Text</type>
</CustomField>