unpackaged/main/default/objects/SalesAreaData__c/fields/DUNS_GU__c.field-meta.xml
<CustomField>
    <fullName>DUNS_GU__c</fullName>
    <formula>Account__r.DB_DUNS_GU__c</formula>
    <label>DUNS GU</label>
    <type>Text</type>
</CustomField>