unpackaged/main/default/objects/SalesAreaData__c/fields/Encours__c.field-meta.xml
<CustomField>
    <fullName>Encours__c</fullName>
    <label>Encours</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>