unpackaged/main/default/objects/SalesAreaData__c/fields/Groupement_ID__c.field-meta.xml
<CustomField>
    <fullName>Groupement_ID__c</fullName>
    <formula>CASESAFEID(Account__r.Groupement__c)</formula>
    <label>Groupement ID</label>
    <type>Text</type>
</CustomField>