unpackaged/main/default/objects/SalesAreaData__c/fields/IsApprovedToCreateOpps__c.field-meta.xml
<CustomField>
    <fullName>IsApprovedToCreateOpps__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsApprovedToCreateOpps</label>
    <type>Checkbox</type>
</CustomField>