unpackaged/main/default/objects/SalesAreaData__c/fields/KeyAccountManager__c.field-meta.xml
<CustomField>
    <fullName>KeyAccountManager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>KAM</label>
    <referenceTo>User</referenceTo>
    <relationshipName>VuesCommercialesClientKAM</relationshipName>
    <type>Lookup</type>
</CustomField>