unpackaged/main/default/objects/SalesAreaData__c/fields/Last_Batch_Update__c.field-meta.xml
<CustomField>
    <fullName>Last_Batch_Update__c</fullName>
    <label>Last Batch Update</label>
    <length>255</length>
    <type>Text</type>
</CustomField>