unpackaged/main/default/objects/SalesAreaData__c/fields/LatePayment__c.field-meta.xml
<CustomField>
    <fullName>LatePayment__c</fullName>
    <description>Alimenté par KWOTE</description>
    <label>Retard de paiement</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>