unpackaged/main/default/objects/SalesAreaData__c/fields/LegalEntityCode__c.field-meta.xml
<CustomField>
    <fullName>LegalEntityCode__c</fullName>
    <formula>SalesArea__r.LegalEntity__r.LegalEntityCode__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Code Entité Légale</label>
    <type>Text</type>
</CustomField>