unpackaged/main/default/objects/SalesAreaData__c/fields/LegalEntityName__c.field-meta.xml
<CustomField>
    <fullName>LegalEntityName__c</fullName>
    <formula>SalesArea__r.LegalEntity__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nom Entité Légale</label>
    <type>Text</type>
</CustomField>