unpackaged/main/default/objects/SalesAreaData__c/fields/Manager_Commercial2__c.field-meta.xml
<CustomField>
    <fullName>Manager_Commercial2__c</fullName>
    <formula>ManagerCommercial__r.FirstName &amp; &quot; &quot; &amp; ManagerCommercial__r.LastName</formula>
    <label>Manager Commercial</label>
    <type>Text</type>
</CustomField>