unpackaged/main/default/objects/SalesAreaData__c/fields/ManagerCommercial__c.field-meta.xml
<CustomField>
    <fullName>ManagerCommercial__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Manager Commercial</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Vues_Commerciales_Client1</relationshipName>
    <type>Lookup</type>
</CustomField>