unpackaged/main/default/objects/SalesAreaData__c/fields/Marque__c.field-meta.xml
<CustomField>
    <fullName>Marque__c</fullName>
    <formula>text(SalesArea__r.Brand__c)</formula>
    <label>Marque</label>
    <type>Text</type>
</CustomField>