unpackaged/main/default/objects/SalesAreaData__c/fields/Marque_Picklist__c.field-meta.xml
<CustomField>
    <fullName>Marque_Picklist__c</fullName>
    <description>Champ marque utilisé dans le flow de création des SAD pour matcher avec l&#39;organisation commerciale. Champ qui se base sur la picklist global Brand</description>
    <label>Marque</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Brand</valueSetName>
    </valueSet>
</CustomField>