unpackaged/main/default/objects/SalesAreaData__c/fields/MaVueCommercialeClient__c.field-meta.xml
<CustomField>
    <fullName>MaVueCommercialeClient__c</fullName>
    <description>Coche la case si le user connecté est le commercial assigné à la vue commerciale client du compte</description>
    <formula>$User.Id =  TerritorialCommercial__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ma vue commerciale client</label>
    <type>Checkbox</type>
</CustomField>