unpackaged/main/default/objects/SalesAreaData__c/fields/Montant_agrement__c.field-meta.xml
<CustomField>
    <fullName>Montant_agrement__c</fullName>
    <label>Montant agrément</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>