unpackaged/main/default/objects/SalesAreaData__c/fields/NbContratCDN1FY__c.field-meta.xml
<CustomField>
    <fullName>NbContratCDN1FY__c</fullName>
    <description>Nombre de contrats CD actifs par type de produit sur vision N-1 FY</description>
    <label>Contrats CD (N-1 FY)</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>