unpackaged/main/default/objects/SalesAreaData__c/fields/NbContratCDYTD__c.field-meta.xml
<CustomField>
    <fullName>NbContratCDYTD__c</fullName>
    <description>Nombre de contrats CD actifs par type de produit sur vision YTD</description>
    <label>Contrats CD (YTD)</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>