unpackaged/main/default/objects/SalesAreaData__c/fields/NbContratLDN1YTD__c.field-meta.xml
<CustomField>
    <fullName>NbContratLDN1YTD__c</fullName>
    <description>Nombre de contrats LD actifs par type de produit sur vision N-1 YTD</description>
    <label>Contrats LD (N-1 YTD)</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>