unpackaged/main/default/objects/SalesAreaData__c/fields/NbContratLDYTD__c.field-meta.xml
<CustomField>
    <fullName>NbContratLDYTD__c</fullName>
    <description>Nombre de contrats LD actifs par type de produit sur vision YTD</description>
    <label>Contrats LD (YTD)</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>