unpackaged/main/default/objects/SalesAreaData__c/fields/NbContratMDYTD__c.field-meta.xml
<CustomField>
    <fullName>NbContratMDYTD__c</fullName>
    <description>Nombre de contrats MD actifs par type de produit sur vision YTD</description>
    <label>Contrats MD (YTD)</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>