unpackaged/main/default/objects/SalesAreaData__c/fields/Note_secteur__c.field-meta.xml
<CustomField>
    <fullName>Note_secteur__c</fullName>
    <formula>IF(
    OR(ISBLANK(Segmentation__c)),
    1,
    Segmentation__r.Notation__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Note secteur</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>