unpackaged/main/default/objects/SalesAreaData__c/fields/Numero_Compte__c.field-meta.xml
<CustomField>
    <fullName>Numero_Compte__c</fullName>
    <formula>Account__r.NumeroCompte__c</formula>
    <label>Numero_Compte</label>
    <type>Text</type>
</CustomField>