unpackaged/main/default/objects/SalesAreaData__c/fields/ParentAccount_Id__c.field-meta.xml
<CustomField>
    <fullName>ParentAccount_Id__c</fullName>
    <description>Parent du compte</description>
    <formula>CASESAFEID(Account__r.Parent.Id)</formula>
    <label>ParentAccount Id</label>
    <type>Text</type>
</CustomField>