unpackaged/main/default/objects/SalesAreaData__c/fields/Pays_SA__c.field-meta.xml
<CustomField>
    <fullName>Pays_SA__c</fullName>
    <formula>text(SalesArea__r.Country__c )</formula>
    <label>Pays SA</label>
    <type>Text</type>
</CustomField>