unpackaged/main/default/objects/SalesAreaData__c/fields/PostalCode__c.field-meta.xml
<CustomField>
    <fullName>PostalCode__c</fullName>
    <formula>Account__r.CodePostal__c</formula>
    <label>PostalCode</label>
    <type>Text</type>
</CustomField>