unpackaged/main/default/objects/SalesAreaData__c/fields/SAD_etrangere__c.field-meta.xml
<CustomField>
    <fullName>SAD_etrangere__c</fullName>
    <defaultValue>false</defaultValue>
    <description>GFC-2921</description>
    <label>SAD étrangère</label>
    <type>Checkbox</type>
</CustomField>