unpackaged/main/default/objects/SalesAreaData__c/fields/SalesArea__c.field-meta.xml
<CustomField>
    <fullName>SalesArea__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Organisation Commerciale</label>
    <referenceTo>SalesArea__c</referenceTo>
    <relationshipLabel>Vues Commerciales Client</relationshipLabel>
    <relationshipName>SalesAreaData</relationshipName>
    <type>Lookup</type>
</CustomField>