unpackaged/main/default/objects/SalesAreaData__c/fields/Secteur__c.field-meta.xml
<CustomField>
    <fullName>Secteur__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Secteur</label>
    <referenceTo>Secteur__c</referenceTo>
    <relationshipLabel>Vues Commerciales Client</relationshipLabel>
    <relationshipName>SalesAreaData</relationshipName>
    <type>Lookup</type>
</CustomField>