unpackaged/main/default/objects/SalesAreaData__c/fields/Segmentation__c.field-meta.xml
<CustomField>
    <fullName>Segmentation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Segmentation</label>
    <referenceTo>Segmentation__c</referenceTo>
    <relationshipLabel>Vues Commerciales Client</relationshipLabel>
    <relationshipName>Vues_Commerciales_Client</relationshipName>
    <type>Lookup</type>
</CustomField>