unpackaged/main/default/objects/SalesAreaData__c/fields/somme_des_loyers_forfaitaires__c.field-meta.xml
<CustomField>
    <fullName>somme_des_loyers_forfaitaires__c</fullName>
    <description>GFC-2955
somme des loyers forfaitaires des devis principaux</description>
    <label>somme des loyers forfaitaires</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>