unpackaged/main/default/objects/SalesAreaData__c/fields/SubmitSADForApproval__c.field-meta.xml
<CustomField>
    <fullName>SubmitSADForApproval__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SubmitSADForApproval</label>
    <type>Checkbox</type>
</CustomField>