unpackaged/main/default/objects/SalesAreaData__c/fields/Tarif_negocie__c.field-meta.xml
<CustomField>
    <fullName>Tarif_negocie__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Tarif négocié</label>
    <type>Checkbox</type>
</CustomField>