unpackaged/main/default/objects/SalesAreaData__c/fields/Tarif_negocie_Parent__c.field-meta.xml
<CustomField>
    <fullName>Tarif_negocie_Parent__c</fullName>
    <formula>if
(
OR(Account__r.Parent.Tarif_negocie__c = true , Account__r.UltimateAccount__r.Tarif_negocie__c )
,
TRUE
,
FALSE
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tarif négocié - Parent</label>
    <type>Checkbox</type>
</CustomField>