unpackaged/main/default/objects/SalesAreaData__c/fields/Tech_AccountId__c.field-meta.xml
<CustomField>
    <fullName>Tech_AccountId__c</fullName>
    <formula>Account__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tech_AccountId</label>
    <type>Text</type>
</CustomField>