unpackaged/main/default/objects/SalesAreaData__c/fields/Territoire__c.field-meta.xml
<CustomField>
    <fullName>Territoire__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Territoire</label>
    <referenceTo>Territory__c</referenceTo>
    <relationshipLabel>Vues Commerciales Client</relationshipLabel>
    <relationshipName>Vues_Commerciales_Client</relationshipName>
    <type>Lookup</type>
</CustomField>