unpackaged/main/default/objects/SalesAreaData__c/fields/TerritorialCommercial2__c.field-meta.xml
<CustomField>
    <fullName>TerritorialCommercial2__c</fullName>
    <formula>TerritorialCommercial__r.FirstName &amp; &quot; &quot; &amp; TerritorialCommercial__r.LastName</formula>
    <label>Commercial / KAM</label>
    <type>Text</type>
</CustomField>