unpackaged/main/default/objects/SalesAreaData__c/fields/TerritorialCommercial__c.field-meta.xml
<CustomField>
    <fullName>TerritorialCommercial__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Commercial / KAM</label>
    <referenceTo>User</referenceTo>
    <relationshipName>VuesCommercialesClientUserCommercial</relationshipName>
    <type>Lookup</type>
</CustomField>