unpackaged/main/default/objects/SalesAreaData__c/fields/Total_Contrats_echeance_CD__c.field-meta.xml
<CustomField>
    <fullName>Total_Contrats_echeance_CD__c</fullName>
    <label>Total Contrats à échéance (CD)</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>