unpackaged/main/default/objects/SalesAreaData__c/fields/Total_Contrats_echeance_MD__c.field-meta.xml
<CustomField>
    <fullName>Total_Contrats_echeance_MD__c</fullName>
    <label>Total Contrats à échéance (MD)</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>