unpackaged/main/default/objects/SalesAreaData__c/fields/TotalContratsActifs__c.field-meta.xml
<CustomField>
    <fullName>TotalContratsActifs__c</fullName>
    <description>Total du nombre de contrats actifs sur chaque ligne de produit sur YTD</description>
    <label>Total Contrat actif</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>