unpackaged/main/default/objects/SalesAreaData__c/fields/TotalContratsAEcheance__c.field-meta.xml
<CustomField>
    <fullName>TotalContratsAEcheance__c</fullName>
    <description>Nombre de contrats par ligne de produit CD/MD/LD dont la date de tacite reconduction est inférieure à 12 mois pour LD, 1 mois pour MD et 1 jour pour CD</description>
    <label>Total Contrats à échéance</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>