unpackaged/main/default/objects/SalesAreaData__c/validationRules/PreventNameFieldEditAfterCreation.validationRule-meta.xml
<ValidationRule>
    <fullName>PreventNameFieldEditAfterCreation</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
  OR(
    ISCHANGED(Name)
  ),
  NOT(ISNEW())
)</errorConditionFormula>
    <errorDisplayField>Name</errorDisplayField>
    <errorMessage>Ce champ ne peut pas être modifié après la création de l&#39;enregistrement.</errorMessage>
</ValidationRule>