unpackaged/main/default/objects/SalesAreaData__c/validationRules/PreventSalesAreaFieldEditAfterCreation.validationRule-meta.xml
<ValidationRule>
    <fullName>PreventSalesAreaFieldEditAfterCreation</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
  OR(
    ISCHANGED( SalesArea__c )
  ),
  NOT(ISNEW())
)</errorConditionFormula>
    <errorDisplayField>SalesArea__c</errorDisplayField>
    <errorMessage>Ce champ ne peut pas être modifié après la création de l&#39;enregistrement.</errorMessage>
</ValidationRule>